# aspeed_app

./: .gitmodules  Makefile  meson.build  meson_options.txt
ast_rvas/: Makefile  rvas_test.c  vtest.c
ast_rvas/rvas_lib/: Makefile  rvas.c  rvas.h  video_ioctl.h
cptra/: Makefile  aspeed_cptra.c  build_mbedtls.sh  ca_cert.h  cmd_cptra.h  cptra.h  ecdsa.h  hash.h  lms.h  mbedtls_user_config.h
espi_test/: Makefile  aspeed-espi.h  mmbi-test.c  oob-pch-test.c
i2c-slave-mqueue/: Makefile  i2c-slave-mqueue.c
i2c-test/: Makefile  back.c  i2c-test  i2c-test.c
i3c-test/: Makefile  i3c-test.c
kcs_bt_test/: Makefile  kcs_bt_test.c
mbox/: Makefile  aspeed_mbox.c
mctp/: Makefile  libmctp.c  libmctp.h  list.h  mctp.c
mctp-i3c/: Makefile  mctp-i3c.c
mctp-socket/: mctp-recv.c  mctp-req.c  mctp-util.c  mctp-util.h  mctp.h  meson.build
mem_utils/: Makefile  compiler.h  md.c  mem_common.c  mem_common.h  mw.c  spd.c  spw.c
otp/: Makefile  aspeed-otp.h  lib_otp_ast2700.c  otp.c  otp_ast2600.c  otp_ast2600.h  otp_ast2700.c  otp_ast2700.h  otp_info_ast2700.h  otp_prov.c  utils.h
svf/: Makefile  ast-jtag.c  ast-jtag.h  jtag.h  main.c  svf.c  svf.h
svf/LCMXO2-7000HE/: mxo2.svf
usb/: Makefile  hid_gadget_test.c
video/: Makefile  ast-video.c  bmp.cc  bmp.h  ikvm_video.cpp  ikvm_video.hpp  main.cc  main1.c  main1.cc  main2.cc  regs-video.h  video.c  video.cc  video.h  video.inf
video2/: Makefile  ikvm_video.cpp  ikvm_video.hpp  main.cc
